# object-storage

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  config.toml
.github/workflows/: publish.yml  test.yml
clients/: .gitignore
clients/go/: Makefile  README.md  client.go  client_test.go  go.mod
clients/python/: Makefile  README.md  pyproject.toml  run_tests.sh
clients/python/object_storage/: __init__.py  client.py
clients/python/tests/: test_client.py
clients/rust/: Cargo.toml  Makefile  README.md
clients/rust/src/: lib.rs
clients/typescript/: Makefile  README.md  package-lock.json  package.json
clients/typescript/src/: index.test.ts  index.ts
object-store/: Cargo.toml
object-store-backends/: Cargo.toml
object-store-backends/src/: azure.rs  backend.rs  error.rs  gcs.rs  lib.rs  local.rs  s3.rs
object-store/src/: api.rs  config.rs  error.rs  lib.rs  main.rs  metadata.rs  router.rs  service.rs
object-store/tests/: integration_test.rs  load_test.rs
