[workspace]
members = ["object-store", "object-store-backends"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Metorial"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage backends
aws-sdk-s3 = "1.14"
aws-config = "1.1"
aws-smithy-types = "1.3"
google-cloud-storage = "0.16"
azure_storage = "0.20"
azure_storage_blobs = "0.20"

# No longer using SQLX - metadata stored in object storage backend

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.12"

# Cryptography for ETag
sha2 = "0.10"
hex = "0.4"

# Content type detection
mime_guess = "2.0"

# Compression
flate2 = "1.0"
