[package]
name = "object-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "object-store-service"
path = "src/main.rs"

[dependencies]
object-store-backends = { path = "../object-store-backends" }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }

# Configuration
config = "0.14"

# HTTP client for health checks
reqwest = "0.11"

[dev-dependencies]
tempfile = "3.8"
mockall = { workspace = true }
futures = "0.3"
