[package]
name = "object-store-client"
version = "1.1.0"
edition = "2021"
authors = ["Object Storage Team"]
license = "Apache-2.0"
description = "Async Rust client library for Object Storage Service - S3-compatible object storage"
repository = "https://github.com/metorial/object-storage"
homepage = "https://github.com/metorial/object-storage"
documentation = "https://docs.rs/object-store-client"
readme = "README.md"
keywords = ["object-storage", "s3", "client", "async"]
categories = ["api-bindings", "web-programming::http-client"]

[workspace]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
